# hosting

./: dashboard.db
Grow-IQ/: .dev_mode  .hr_dev_mode  .renderignore  .replit  .sessions.json  API_DOCUMENTATION.md  AZURE_MCP_SETUP.md  AZURE_SUBSCRIPTION_SETUP.md  COMMANDS.md  COMPREHENSIVE_APP_REPORT.md  CONNECTION_API_DOCUMENTATION.md  CURSOR_MODEL_ID_SETUP.md  CURSOR_SIMPLE_MODEL_SETUP.md  CURSOR_VISION_MODEL_SETUP.md  Dockerfile  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  LM_STUDIO_CURSOR_SETUP.md  LM_STUDIO_QUICK_SETUP.md  LOCALHOST_FIXES.md  LOCALHOST_FIX_SUMMARY.md  MCP_SERVERS_REPORT.md  OAUTH_SETUP_GUIDE.md  QUICK_ACTIONS_REMOVAL_SUMMARY.md  README.md  RENDER_CHECKLIST.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_LOCALHOST_FIX.md  RENDER_QUICK_START.md  RESUMEATHON_IMPLEMENTATION_SUMMARY.md  RESUMEATHON_REAL_SCORES_IMPLEMENTATION.md  RESUME_BUILDER_REMOVAL_SUMMARY.md  SQLALCHEMY_SETUP.md  admin_routes.py  alembic.ini  api_routes.py  app.db  app.py  app_fixed.py  app_minimal.py  (+164 more)
Grow-IQ/attached_assets/: write_1754581309418.html
Grow-IQ/doc/: CONNECTION_MANAGEMENT_README.md  CONNECTION_SYSTEM_README.md  ENHANCED_FEATURES_README.md  ENHANCED_HR_DASHBOARD_README.md  ENHANCED_SEARCH_README.md  HR_ACCESS_CONTROL_README.md  HR_DASHBOARD_500_ERROR_FIX_README.md  HR_DASHBOARD_FINAL_FIX_README.md  HR_DASHBOARD_README.md  HR_LOGIN_FIX_README.md  INTERVIEW_INTERFACE_README.md  JOBS_REDESIGN_README.md  JOB_APPLICATION_SUCCESS_README.md  JOB_POSTING_FIX_README.md  JOB_RECOMMENDATION_README.md  LOGIN_SYSTEM_FIX_README.md  MESSAGE_README.md  PROFILE_PICTURE_README.md  (+11 more)
(+143 files in other folders)
