[project]
name = "career-connect"
version = "0.1.0"
description = "Qrow IQ - A professional career development platform built with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.42",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "email-validator>=2.2.0",
]
